--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a wrapper with supertest ",
   "main": "index.js",
   "scripts": {
-     "test": "./node_modules/.bin/nyc ./node_modules/.bin/ava -v .",
+     "test": "./node_modules/.bin/nyc ./node_modules/.bin/ava -v test.js",
      "report-coverage": "./node_modules/.bin/nyc report --reporter=lcov > coverage.lcov && codecov",
      "standard": "./node_modules/.bin/standard index.js"
    },
